just line breaks

--- a/08-PML-Course-project.html
+++ b/08-PML-Course-project.html
@@ -537,40 +537,40 @@ print(performance)</code></pre>
 ## 
 ##           Reference
 ## Prediction    A    B    C    D    E
-##          A 1116    0    0    0    0
-##          B    0  759    0    0    0
+##          A 1116    1    0    0    0
+##          B    0  758    0    1    0
 ##          C    0    0  684    0    0
-##          D    0    0    0  643    0
+##          D    0    0    0  642    0
 ##          E    0    0    0    0  721
 ## 
 ## Overall Statistics
 ##                                                
-##                Accuracy : 1                    
-##                  95% CI : (0.9991, 1)          
+##                Accuracy : 0.9995               
+##                  95% CI : (0.9982, 0.9999)     
 ##     No Information Rate : 0.2845               
 ##     P-Value [Acc &gt; NIR] : &lt; 0.00000000000000022
 ##                                                
-##                   Kappa : 1                    
+##                   Kappa : 0.9994               
 ##                                                
 ##  Mcnemar&#39;s Test P-Value : NA                   
 ## 
 ## Statistics by Class:
 ## 
 ##                      Class: A Class: B Class: C Class: D Class: E
-## Sensitivity            1.0000   1.0000   1.0000   1.0000   1.0000
-## Specificity            1.0000   1.0000   1.0000   1.0000   1.0000
-## Pos Pred Value         1.0000   1.0000   1.0000   1.0000   1.0000
-## Neg Pred Value         1.0000   1.0000   1.0000   1.0000   1.0000
+## Sensitivity            1.0000   0.9987   1.0000   0.9984   1.0000
+## Specificity            0.9996   0.9997   1.0000   1.0000   1.0000
+## Pos Pred Value         0.9991   0.9987   1.0000   1.0000   1.0000
+## Neg Pred Value         1.0000   0.9997   1.0000   0.9997   1.0000
 ## Prevalence             0.2845   0.1935   0.1744   0.1639   0.1838
-## Detection Rate         0.2845   0.1935   0.1744   0.1639   0.1838
-## Detection Prevalence   0.2845   0.1935   0.1744   0.1639   0.1838
-## Balanced Accuracy      1.0000   1.0000   1.0000   1.0000   1.0000</code></pre>
-<p>Very good! the RandomForest model achieves an 1 accuracy on this unseen data set, which is what he hoped for. We can conclude that this final model is not likely be overfitted and may perform well also on the official test cases.</p>
+## Detection Rate         0.2845   0.1932   0.1744   0.1637   0.1838
+## Detection Prevalence   0.2847   0.1935   0.1744   0.1637   0.1838
+## Balanced Accuracy      0.9998   0.9992   1.0000   0.9992   1.0000</code></pre>
+<p>Very good! the RandomForest model achieves an 99.9490186% accuracy on this unseen data set, which is what he hoped for. We can conclude that this final model is not likely be overfitted and may perform well also on the official test cases.</p>
 </div>
 <div id="diagnosis" class="section level2">
 <h2>Diagnosis</h2>
 <p>We check what predictors are of highest importance in this algorithm and if this is plausible. Also we double check again if we really all these variables are suitable and good predictors.</p>
-<pre class="r"><code>varimportance &lt;- varImp(fit.rf, 10)
+<pre class="r"><code>varimportance &lt;- varImp(fit.rf)
 varimportance</code></pre>
 <pre><code>## rf variable importance
 ## 
@@ -616,7 +616,8 @@ table(pred.rf.testing.lean)</code></pre>
 <div id="reproducability" class="section level2">
 <h2>Reproducability</h2>
 <p>This R markdown files is complete and runnable. However the rendering did only succeed from the console with</p>
-<p><code>library(&quot;knitr&quot;) rmarkdown::render(&quot;08-PML-Course-project.Rmd&quot;)</code></p>
+<p><code>library(&quot;knitr&quot;)</code></p>
+<p><code>rmarkdown::render(&quot;08-PML-Course-project.Rmd&quot;)</code></p>
 </div>
 
 
